--- a/index.html
+++ b/index.html
@@ -21,5 +21,7 @@
 </p>
 
 <script src="gee.js"></script>    
+
+<footer> <i> &copy; All the rights are reserved to the chad himself, Ricardo Milos </i> </footer>
 </body>
 </html>
