--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="gee.css">
 </head>
 <body>
+    <img src="img.gif" alt="Rainbow" width="400px" height="auto">
     <h2 id="ultimate">The ULTIMATE gee test</h2>
 
     <p id="p1">I'll find out, whether you're gee or not, just by reading your name.</p>
@@ -23,5 +24,6 @@
 <script src="gee.js"></script>    
 
 <footer> <i> &copy; All the rights are reserved to the chad himself, Ricardo Milos </i> </footer>
+
 </body>
 </html>
